--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 *{
-    padding: 0;
+    box-sizing: border-box;
     margin: 0;
+    padding: 0;
     --color-light-grey: hsl(0, 0%, 86%);
     --color-light-red:hsl(0, 100%, 67%);
     --color-off-black: hsl(0, 0%, 8%);
@@ -16,33 +17,22 @@ body{
     font-family: Poppins, sans-serif;
 }
 
-section{
+.principal{
     background-color: #fff;
     border-radius: 2% 2% 20% 2%;
     margin: 10% auto;
     padding: 2rem;
     width: 60%;
+    position: relative;
 }
-
-.teste{
-    display: flex;
     
-}
-
-.icon-arrow{
-    background-color: var(--color-purple);
-    border-radius: 50%;
-    cursor: pointer;
-    
-}
-
-.icon-arrow:hover{
-    background-color: var(--color-off-black);
-}
 .entradas{
     display: flex;
-    margin-left: auto;
-    gap: 10%;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    width: 90%;
+    /* margin-left: auto;
+    gap: 10%; */
 }
 .inputs{
     display: flex;
@@ -56,14 +46,13 @@ section{
     text-transform: uppercase;
 }
 
-.inputs input{
-    
+.inputs input{  
     border: 0.5px solid;
     border-color: var(--color-light-grey);
     border-radius: 5px;
     font-size: 32px;
     padding: 10px;
-    width: 70%;
+    width: 60%;
 }
 
 .inputs input::placeholder{
@@ -73,6 +62,35 @@ section{
     font-weight: 700;
 }
 
+.linha-seta{
+    align-items: center;
+    display: flex;
+    margin-bottom: 25px;
+}
+
+.linha{
+    border-bottom: 2px solid var(--color-light-grey);
+    width: 100%;
+}
+
+.icon-arrow{
+    align-items: center;
+    background-color: var(--color-purple);
+    border-radius: 50%;
+    display: flex;
+    height: 60px;
+    justify-content: center;
+    position: absolute;
+    right: 20px;
+    width: 60px;
+  
+}
+
+.icon-arrow:hover{
+    background-color: var(--color-off-black);
+}
+
+/* ------------------------------------- */
 .resultado{
     font-size: 64px;
     font-style: italic;
